templates/argocd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    project: argocd
    app: argocd-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.corvaglia.dev`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.corvaglia.dev`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    certResolver: letsencrypt-argocd-tls
